--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,30 +1,53 @@
 body {
-  font-family: "Open Sans", sans-serif;
+  font-family: "Roboto Condensed", sans-serif;
   color: #272829;
 }
-
+nav {
+  width: 100%;
+  padding: 10px;
+  height: 45px;
+}
+.navAndContent {
+  position: fixed;
+  right: 0;
+  width: 82%;
+  bottom: 0;
+  top: 0;
+  background: -webkit-linear-gradient(
+    135deg,
+    rgb(58, 58, 61),
+    rgb(64, 64, 67),
+    rgb(52, 52, 55),
+    rgb(34, 35, 39)
+  );;
+}
+span {
+  position: absolute;
+  right: 30px;
+}
 a:link {
   text-decoration: none;
 }
+
 li {
   list-style-type: none;
-  padding: 10px;
 }
 
-.header {
+header {
   position: fixed;
   top: 0;
   left: 0;
   bottom: 0;
-  width: 300px;
+  width: 18%;
   transition: all ease-in-out 0.5s;
   z-index: 9997;
   transition: all 0.5s;
   padding: 0 15px;
-  background: #0f161e;
+  background: #131416;
   overflow-y: auto;
 }
-.header .profile img {
+
+header .profile img {
   width: 150px;
   border: 2px solid #777a89;
   display: block;
@@ -33,7 +56,7 @@ li {
   border-radius: 20px;
 }
 
-.header .profile h1 {
+header .profile h1 {
   font-size: 24px;
   color: #777a89;
   margin: 0;
@@ -43,16 +66,28 @@ li {
   text-align-last: center;
   font-family: "Poppins", sans-serif;
 }
-.header .profile h1 a, #nav a {
-  color: #777a89;
+hr {
+  background-color: rgb(41, 37, 37);
+  width: 80%;
 }
 
-.header .profile h1 a:hover ,#nav a:hover{
-  color: rgba(73, 230, 75, 0.912);
+nav a,
+header .profile h1,
+header .profile h1 a,
+.lists a ,.navAndContent .cont{
+  color: #6d6e73;
+  font-family: "Times New Roman", Times, serif;
+  font-weight: bolder;
+}
+
+nav a:hover,
+header .profile h1 a:hover,
+.lists a:hover {
+  color: rgba(205, 210, 205, 0.912);
   text-decoration: none;
 }
 
-.social-links  a {
+.social-links a {
   font-size: 18px;
   display: inline-block;
   background: #464b5d;
@@ -66,18 +101,34 @@ li {
   height: 36px;
   transition: 0.3s;
 }
-.social-links .social{
-    display: inline-block;
+
+.social-links .social {
+  display: inline-block;
 }
-.github a:hover{
-    color: black;
+
+.github a:hover {
+  color: black;
 }
-.facebook a:hover{
-    color:rgba(65, 111, 249, 0.881);
+
+.facebook a:hover {
+  color: rgba(65, 111, 249, 0.881);
 }
-.twitter a:hover{
-    color:rgba(74, 205, 234, 0.881);
+
+.twitter a:hover {
+  color: rgba(74, 205, 234, 0.881);
 }
-.instagram a:hover{
-    color:rgb(218, 108, 108);
+
+.instagram a:hover {
+  color: rgb(218, 108, 108);
 }
+
+.cont {
+  top: 45px;
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  width: 100%;
+
+}
+
+
