--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -128,7 +128,17 @@ header .profile h1 a:hover,
   bottom: 0;
   right: 0;
   width: 100%;
-
 }
 
+@media only screen and (max-width: 768px) {
+  header {
+    width: 100%;
+    transition: all ease-in-out 0.5s;
+    z-index: 9997;
+    transition: all 0.5s;
+    padding: 0 15px;
+    background: #131416;
+    overflow-y: auto;
+  }
 
+}
