--- a/assets/css/mystyle.scss
+++ b/assets/css/mystyle.scss
@@ -85,12 +85,9 @@ header {
       color: var(--color-white) !important;
       transition: all 0.4s ease-in-out;
 
-
       a {
         color: var(--color-white) !important;
         font-size: 21px;
-
-    
       }
     }
     hr {
@@ -110,7 +107,6 @@ header {
         &:hover {
           color: var(--color-grey-1);
           font-size: 22px;
-
         }
         i {
           cursor: pointer;
@@ -207,7 +203,6 @@ header {
   }
 }
 
-
 //Main Section
 
 main {
@@ -217,7 +212,11 @@ main {
   background-color: white;
 
   section {
+    display: none;
     margin: 10px;
     background-color: #000;
+  }
+  .section-active {
+    display: block;
   }
 }
