--- a/assets/css/mystyle.scss
+++ b/assets/css/mystyle.scss
@@ -6,8 +6,8 @@
 }
 
 :root {
-  --color-primary: #191d2b;
-  --color-secondary: #919d96;
+  --color-primary: #363945;
+  --color-secondary: #1edf11;
   --color-white: #ffffff;
   --color-black: #000;
   --color-grey0: #f8f8f8;
@@ -18,6 +18,13 @@
   --color-grey-5: #2a2e35;
   --color-grey-6: #12181b;
   --color-grey-7: #313232;
+  --color-js: #f8de49;
+  --color-html: #fc7a2a;
+  --color-css: #1b7cfb;
+  --color-py: #f0cc2b;
+  --color-node: #59bd48;
+  --color-bt: #7663f6;
+  --color-git: #f74343;
 
   --br-sm-2: 14px;
   --box-shadow-1: 0 3px 15px rgba(0, 0, 0, 0.3);
@@ -38,13 +45,15 @@
 }
 body {
   font-family: "Poppins", sans-serif;
-  background-color: var(--color-grey-3);
+  background-color: var(--color-primary);
   font-family: "popins", sans-serif;
   font-size: 1.1rem;
   color: var(--color-white);
 }
+
+// Header
 header {
-  position: absolute;
+  position: fixed;
   top: 0;
   left: 0;
   width: 30%;
@@ -77,6 +86,9 @@ header {
   a:link {
     text-decoration: none;
   }
+
+  // Button tab
+
   .my-lists {
     font-size: 20px;
     font-family: "Times New Roman", Times, serif;
@@ -102,8 +114,11 @@ header {
       margin-left: 34%;
       margin-right: 35%;
       padding: 1rem;
+
       a {
         color: var(--color-grey-3);
+        box-shadow: var(--box-shadow-2);
+
         &:hover {
           color: var(--color-grey-1);
           font-size: 22px;
@@ -116,6 +131,7 @@ header {
     }
   }
 
+  // sosial media link
   .socail-links {
     font-size: 25px;
     display: inline-block;
@@ -205,18 +221,433 @@ header {
 
 //Main Section
 
+.main-title {
+  margin: 4rem;
+  text-align: center;
+
+  h2 {
+    position: relative;
+    text-transform: uppercase;
+    font-size: 4rem;
+    font-weight: 700;
+
+    span {
+      color: var(--color-secondary);
+    }
+
+    .bg-text {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      color: var(--color-grey-5);
+      transition: all 0.4s ease-in-out;
+      z-index: -1;
+      transform: translate(-50%, -50%);
+      font-weight: 800;
+      font-size: 6rem;
+    }
+  }
+}
+
 main {
   position: absolute;
   width: 70%;
   right: 0;
-  background-color: white;
+  padding: 3rem;
 
   section {
     display: none;
     margin: 10px;
-    background-color: #000;
   }
   .section-active {
     display: block;
+    animation: scaleAnim 1s ease-in-out;
+
+    @keyframes scaleAnim {
+      0% {
+        transform: translateX(100%) scaleX(0);
+      }
+
+      100% {
+        transform: translateX(0) scaleX(1);
+      }
+    }
+  }
+  .operetor__section--1 {
+    margin: 15rem;
+    text-align: center;
+    .name {
+      font-size: 4rem;
+
+      span {
+        color: var(--color-secondary);
+      }
+
+      p {
+        margin: 1.5rem 0;
+        line-height: 3rem;
+      }
+    }
+  }
+  //about
+
+  .about-container {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    padding: 3rem;
+
+    .right-about {
+      display: grid;
+      grid-template-columns: repeat(2, 1fr);
+      grid-gap: 2rem;
+
+      .about-item {
+        border: 1px solid var(--color-grey-5);
+        border-radius: 5px;
+        transition: all 0.4s ease-in-out;
+        box-shadow: 1px 2px 15px rgba(0, 0, 0, 0.1);
+
+        &:hover {
+          cursor: default;
+          transform: translateY(-5px);
+          border: 1px solid var(--color-secondary);
+          box-shadow: 1px 4px 15px rgba(0, 0, 0, 0.32);
+        }
+
+        .abt-text {
+          padding: 1.5rem;
+          display: flex;
+          flex-direction: column;
+
+          .large-text {
+            font-size: 3rem;
+            font-weight: 700;
+            color: var(--color-secondary);
+          }
+
+          .small-text {
+            padding-left: 3rem;
+            position: relative;
+            text-transform: uppercase;
+            font-size: 1.2rem;
+            color: var(--color-grey-1);
+            letter-spacing: 2px;
+
+            &::before {
+              content: "";
+              position: absolute;
+              left: 0;
+              top: 15px;
+              width: 2rem;
+              height: 2px;
+              background-color: var(--color-grey-5);
+            }
+          }
+        }
+      }
+    }
+
+    .left-about {
+      padding-right: 5rem;
+
+      p {
+        line-height: 2rem;
+        padding: 1rem;
+        color: var(--color-grey-1);
+      }
+
+      h4 {
+        font-size: 2rem;
+        text-transform: uppercase;
+      }
+    }
+  }
+  .stat-title {
+    text-transform: uppercase;
+    font-size: 1.4rem;
+    text-align: center;
+    padding: 3.5rem 0;
+    position: relative;
+    &::before {
+      content: "";
+      position: absolute;
+      left: 50%;
+      top: 0;
+      width: 40%;
+      height: 1px;
+      background-color: var(--color-grey-5);
+      transform: translateX(-50%);
+    }
+  }
+  .about-stats {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-gap: 2rem;
+    padding: 5rem;
+    text-transform: uppercase;
+    font-weight: 500;
+    i {
+      font-size: 2rem;
+      padding-right: 1rem;
+    }
+    .fa-js {
+      color: var(--color-js);
+    }
+    .fa-html5 {
+      color: var(--color-html);
+    }
+    .fa-css3 {
+      color: var(--color-css);
+    }
+    .fa-bootstrap {
+      color: var(--color-bt);
+    }
+    .fa-python {
+      color: var(--color-py);
+    }
+    .fa-node-js {
+      color: var(--color-node);
+    }
+    .fa-git {
+      color: var(--color-git);
+    }
+    .progress-bar {
+      margin-left: 10rem;
+    }
+  }
+}
+/*Timeline*/
+.timeline {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-gap: 2rem;
+  padding: 5rem;
+  .timeline-item {
+    position: relative;
+    padding-left: 3rem;
+    border-left: 1px solid var(--color-grey-5);
+    .tl-icon {
+      position: absolute;
+      left: -27px;
+      top: 0;
+      background-color: var(--color-secondary);
+      width: 50px;
+      height: 50px;
+      border-radius: 50%;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      i {
+        font-size: 1.3rem;
+      }
+    }
+    .tl-duration {
+      padding: 0.2rem 0.6rem;
+      background-color: var(--color-grey-5);
+      border-radius: 15px;
+      display: inline-block;
+      font-size: 0.8rem;
+      text-transform: uppercase;
+      font-weight: 500;
+    }
+    h5 {
+      padding: 1rem 0;
+      text-transform: uppercase;
+      font-size: 1.3rem;
+      font-weight: 600;
+      span {
+        color: var(--color-grey-2);
+        font-weight: 500;
+        font-size: 1.2rem;
+      }
+    }
+    p {
+      color: var(--color-grey-2);
+    }
+  }
+}
+
+.port-text {
+  padding: 2rem 0;
+  text-align: center;
+}
+.portfolios {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-gap: 2rem;
+  margin-top: 3rem;
+  .portfolio-item {
+    position: relative;
+    border-radius: 15px;
+    img {
+      width: 100%;
+      height: 300px;
+      object-fit: cover;
+      border-radius: 15px;
+    }
+    .hover-items {
+      width: 100%;
+      height: 100%;
+      background-color: var(--color-secondary);
+      position: absolute;
+      left: 0;
+      top: 0;
+      border-radius: 15px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      flex-direction: column;
+      opacity: 0;
+      transform: scale(0);
+      transition: all 0.4s ease-in-out;
+      h3 {
+        font-size: 1.5rem;
+        color: var(--color-white);
+        margin-bottom: 1.5rem;
+      }
+      .icons {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        .icon {
+          background-color: var(--color-primary);
+          border-radius: 50%;
+          width: 50px;
+          height: 50px;
+          display: flex;
+          align-items: center;
+          justify-content: center;
+          margin: 0 1rem;
+          cursor: pointer;
+          transition: all 0.4s ease-in-out;
+
+          i {
+            font-size: 1.5rem;
+            color: var(--color-white);
+            margin: 0 1rem;
+          }
+          &:hover {
+            background-color: var(--color-white);
+            i {
+              color: var(--color-primary);
+            }
+          }
+        }
+      }
+    }
+  }
+}
+
+.portfolio-item:hover .hover-items {
+  opacity: 1;
+  transform: scale(1);
+}
+
+// contact section
+.contact-content-con {
+  display: flex;
+  padding-top: 3.5rem;
+  .left-contact {
+    flex: 2;
+    text-align: center;
+    h4 {
+      margin-top: 1rem;
+      font-size: 2rem;
+      text-transform: uppercase;
+    }
+    p {
+      margin: 1rem 0;
+      line-height: 2rem;
+    }
+    .contact-info {
+      .contact-item {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        p {
+          margin: 0.3rem 0 !important;
+          padding: 0 !important;
+        }
+        .icon {
+          display: grid;
+          grid-template-columns: 40px 1fr;
+          i {
+            display: flex;
+            align-items: center;
+            font-size: 1.3rem;
+          }
+        }
+      }
+    }
+    .contact-icon {
+      display: flex;
+      margin-top: 2rem;
+      a {
+        display: flex;
+        align-items: center;
+        color: var(--color-white);
+        background-color: var(--color-grey-5);
+        cursor: pointer;
+        justify-content: center;
+        width: 50px;
+        height: 50px;
+        border-radius: 50%;
+        margin: 0 0.4rem;
+        transition: all 0.4s ease-in-out;
+        &:hover {
+          background-color: var(--color-secondary);
+          i {
+            color: var(--color-primary);
+          }
+        }
+        i {
+          display: flex;
+          align-items: center;
+          justify-content: center;
+          font-size: 1.3rem;
+        }
+      }
+    }
+  }
+  .right-contact {
+    flex: 3;
+    margin-left: 3rem;
+    .input-control {
+      margin: 1.5rem 0;
+      input,
+      textarea {
+        border-radius: 30px;
+        font-weight: inherit;
+        font-size: inherit;
+        font-family: inherit;
+        padding: 0.8rem 1.1rem;
+        outline: none;
+        border: none;
+        background-color: var(--color-grey-5);
+        width: 100%;
+        color: var(--color-white);
+        resize: none;
+      }
+    }
+    .i-c-2 {
+      display: flex;
+      :last-child {
+        margin-left: 1.5rem;
+      }
+    }
+    .submit-btn {
+      display: flex;
+      justify-content: end;
+      .main-btn {
+        font-size: 20px;
+        padding: 10px;
+        border-radius: 10px;
+        background-color: var(--color-secondary);
+        color: var(--color-grey0);
+        &hover {
+          cursor: pointer;
+        }
+      }
+    }
   }
 }
